--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>youTube Home Page Clone</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
-    <link rel="stylesheet" href="youtube/video.css">
-    <link rel="stylesheet" href="youtube/headers.css">
-    <link rel="stylesheet" href="youtube/body.css">
-    <link rel="stylesheet" href="youtube/sidebar.css">
+    <link rel="stylesheet" href="css/video.css">
+    <link rel="stylesheet" href="css/headers.css">
+    <link rel="stylesheet" href="css/body.css">
+    <link rel="stylesheet" href="css/sidebar.css">
     <script type="module" src="index.js"></script>
   </head>
 
@@ -71,4 +71,5 @@
     <div class="video-div"></div>
     
   </body>
+
 </html>
