--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-
     <title>youTube Home Page Clone</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
@@ -13,7 +12,8 @@
   </head>
 
   <body>
-
+    
+    <div class="sidebar-overlay"></div>
 
     <div class="header">
       <div class="left-section button">
@@ -39,7 +39,6 @@
         <img class="naveen-icon button" src="header-icons/Nandu.png" title="Profile" alt="Profile">
       </div>
     </div>
-
 
     <div class="sidebar">
       <div class="sidebar-link button">
@@ -69,7 +68,5 @@
     </div>
 
     <div class="video-div"></div>
-    
   </body>
-
 </html>
