--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
       <div class="sidebar-link button">
         <img src="sidebar-icons/youtube-music.svg">
-        <div>YouTube Music</div>
+        <div>Music</div>
       </div>
       <div class="sidebar-link button">
         <img src="sidebar-icons/library.svg">
@@ -70,3 +70,4 @@
     <div class="video-div"></div>
   </body>
 </html>
+
