--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>youTube Home Page Clone</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
-    <link rel="stylesheet" href="css/video.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/headers.css">
     <link rel="stylesheet" href="css/body.css">
     <link rel="stylesheet" href="css/sidebar.css">
@@ -67,5 +67,6 @@
     <div class="video-div"></div>
   </body>
 </html>
+
 
 
