--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>youTube Home Page Clone</title>
+    <title>YouTube Home Page Clone</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
     <link rel="stylesheet" href="css/main.css">
@@ -67,6 +67,7 @@
     <div class="video-div"></div>
   </body>
 </html>
+
 
 
 
